Edit 'Contact Book' card

--- a/index.html
+++ b/index.html
@@ -175,22 +175,30 @@
         </div>
 
         <div class="row g-4">
-          <!-- Card template: duplicate for more projects -->
           <div class="col-12 col-md-6 col-xl-4">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <h3 class="h5 card-title">
-                  Vite + React + FirestoreDB Contact Book
+                  Contact Book (React + Firebase Firestore)
                 </h3>
+
                 <p class="text-muted small mb-3">
-                  Web/mobile-style CRUD app using React (Vite) and Firestore.
+                  Web/mobile-style CRUD application built with React (Vite) and
+                  Firebase Firestore, using a mobile-first UI shared across
+                  platforms.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">React</span>
-                  <span class="badge text-bg-light border">Vite</span>
+                  <span class="badge text-bg-light border">Firebase</span>
                   <span class="badge text-bg-light border">Firestore</span>
-                  <span class="badge text-bg-light border">Bootstrap</span>
+                  <span class="badge text-bg-light border">CRUD</span>
+                  <span class="badge text-bg-light border"
+                    >Mobile-first UI</span
+                  >
+                  <span class="badge text-bg-light border">GitHub Pages</span>
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
@@ -200,9 +208,10 @@
                   >
                     Live Demo
                   </a>
+
                   <a
                     class="btn btn-outline-secondary btn-sm"
-                    href="https://github.com/shap0011/firestore"
+                    href="https://github.com/shap0011/firestore/tree/master"
                     target="_blank"
                     rel="noreferrer"
                   >
