Edit Jekyll card

--- a/index.html
+++ b/index.html
@@ -228,30 +228,41 @@
                 <h3 class="h5 card-title">
                   Machine Learning Portfolio (Jekyll)
                 </h3>
+
                 <p class="text-muted small mb-3">
-                  Jekyll-based ML portfolio featuring notebooks and data
-                  cleaning content.
+                  Static machine learning portfolio built with Jekyll to
+                  showcase Python-based data analysis, preprocessing, and
+                  modeling examples. Full notebooks are available on GitHub.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">Python</span>
+                  <span class="badge text-bg-light border"
+                    >Machine Learning</span
+                  >
                   <span class="badge text-bg-light border">Jekyll</span>
                   <span class="badge text-bg-light border">GitHub Pages</span>
+                  <span class="badge text-bg-light border">Data Analysis</span>
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
-                    href="#"
+                    href="https://shap0011.github.io/ml_portfolio/index.html"
                     target="_blank"
                     rel="noreferrer"
-                    >Live</a
                   >
+                    Live Portfolio
+                  </a>
+
                   <a
                     class="btn btn-outline-secondary btn-sm"
-                    href="#"
+                    href="https://github.com/shap0011/ml_portfolio"
                     target="_blank"
                     rel="noreferrer"
-                    >Repo</a
                   >
+                    GitHub Repo
+                  </a>
                 </div>
               </div>
             </div>
