Update 'Power BI Dashboards' card

--- a/index.html
+++ b/index.html
@@ -274,30 +274,41 @@
                 <h3 class="h5 card-title">
                   Hospital Management Power BI Dashboards
                 </h3>
+
                 <p class="text-muted small mb-3">
-                  Power BI dashboards using MSSQL/SQL data modeling and
-                  reporting.
+                  Business intelligence dashboards built in Power BI to analyze
+                  hospital management data, including trends, metrics, and
+                  operational insights.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">Power BI</span>
+                  <span class="badge text-bg-light border">Data Modeling</span>
                   <span class="badge text-bg-light border">SQL</span>
                   <span class="badge text-bg-light border">MSSQL</span>
+                  <span class="badge text-bg-light border"
+                    >Business Intelligence</span
+                  >
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
-                    href="#"
+                    href="https://shap0011.github.io/hospital_management/"
                     target="_blank"
                     rel="noreferrer"
-                    >Portfolio Page</a
                   >
+                    Project Overview
+                  </a>
+
                   <a
                     class="btn btn-outline-secondary btn-sm"
-                    href="#"
+                    href="https://github.com/shap0011/hospital_management"
                     target="_blank"
                     rel="noreferrer"
-                    >Repo / Files</a
                   >
+                    GitHub Repo
+                  </a>
                 </div>
               </div>
             </div>
