Update 'Hospital Management...' project card

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -276,16 +276,19 @@
                 </h3>
 
                 <p class="text-muted small mb-3">
-                  Business intelligence dashboards built in Power BI to analyze
-                  hospital management data, including trends, metrics, and
-                  operational insights.
+                  Business intelligence dashboards built with Power BI to
+                  analyze hospital operations, patient flow, inventory, and
+                  staffing metrics. Includes a documented project
+                  walkthrough.<br />
+                  <i>Uses sample data for demonstration purposes.</i>
                 </p>
 
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">Power BI</span>
                   <span class="badge text-bg-light border">Data Modeling</span>
-                  <span class="badge text-bg-light border">SQL</span>
-                  <span class="badge text-bg-light border">MSSQL</span>
+                  <span class="badge text-bg-light border">Power Query</span>
+                  <span class="badge text-bg-light border">DAX</span>
+                  <span class="badge text-bg-light border">SQL / MSSQL</span>
                   <span class="badge text-bg-light border"
                     >Business Intelligence</span
                   >
@@ -298,7 +301,7 @@
                     target="_blank"
                     rel="noreferrer"
                   >
-                    Project Overview
+                    Project Walkthrough
                   </a>
 
                   <a
