Update Wordpress  bootstrap card

--- a/index.html
+++ b/index.html
@@ -321,31 +321,45 @@
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <h3 class="h5 card-title">
-                  Flask Web App: Automating Dataset Cleaning
+                  SmartClean — Flask Data Cleaning Web App
                 </h3>
+
                 <p class="text-muted small mb-3">
-                  Web app that streamlines data cleaning workflows.
+                  Full-stack Python Flask application that automates dataset
+                  cleaning workflows. Users can upload CSV files, clean numeric,
+                  categorical, and date columns step by step, preview results,
+                  and download the cleaned dataset.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">Python</span>
                   <span class="badge text-bg-light border">Flask</span>
-                  <span class="badge text-bg-light border">Data</span>
+                  <span class="badge text-bg-light border">Pandas</span>
+                  <span class="badge text-bg-light border">Data Cleaning</span>
+                  <span class="badge text-bg-light border"
+                    >Session Management</span
+                  >
+                  <span class="badge text-bg-light border">Bootstrap</span>
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
-                    href="#"
+                    href="https://smartclean-flask.onrender.com/"
                     target="_blank"
                     rel="noreferrer"
-                    >Demo</a
                   >
+                    Live Demo
+                  </a>
+
                   <a
                     class="btn btn-outline-secondary btn-sm"
-                    href="#"
+                    href="https://github.com/shap0011/smartclean-flask"
                     target="_blank"
                     rel="noreferrer"
-                    >Repo</a
                   >
+                    GitHub Repo
+                  </a>
                 </div>
               </div>
             </div>
@@ -354,30 +368,41 @@
           <div class="col-12 col-md-6 col-xl-4">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
-                <h3 class="h5 card-title">Cloud-Native Pet Store Deployment</h3>
+                <h3 class="h5 card-title">BestBuy Cloud-Native App on AKS</h3>
+
                 <p class="text-muted small mb-3">
-                  Full-stack cloud-native deployment & management project.
+                  Cloud-native microservices application deployed to Azure
+                  Kubernetes Service (AKS). Includes containerization, CI/CD,
+                  ingress, scaling, and cloud-native architecture patterns.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
-                  <span class="badge text-bg-light border">Cloud</span>
-                  <span class="badge text-bg-light border">DevOps</span>
-                  <span class="badge text-bg-light border">Containers</span>
+                  <span class="badge text-bg-light border">Azure</span>
+                  <span class="badge text-bg-light border">AKS</span>
+                  <span class="badge text-bg-light border">Kubernetes</span>
+                  <span class="badge text-bg-light border">Docker</span>
+                  <span class="badge text-bg-light border">Microservices</span>
+                  <span class="badge text-bg-light border">CI/CD</span>
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
-                    href="#"
+                    href="https://youtu.be/cTUl0Hz1YYc?si=UpqjJT8VjRnYncq9"
                     target="_blank"
                     rel="noreferrer"
-                    >Overview</a
                   >
+                    Video Overview
+                  </a>
+
                   <a
                     class="btn btn-outline-secondary btn-sm"
-                    href="#"
+                    href="https://github.com/shap0011/bestbuy-cloud-native-aks"
                     target="_blank"
                     rel="noreferrer"
-                    >Repo</a
                   >
+                    GitHub Repo
+                  </a>
                 </div>
               </div>
             </div>
@@ -389,30 +414,34 @@
                 <h3 class="h5 card-title">
                   GHS Enterprise Website (WordPress)
                 </h3>
+
                 <p class="text-muted small mb-3">
-                  UX audit + redesign: structure, blog visuals, reCAPTCHA,
-                  Search Console integration.
+                  Team-based website redesign developed in WordPress. I
+                  implemented a designer-provided Figma UI design into a
+                  production-ready, responsive website.
                 </p>
+
                 <div class="d-flex flex-wrap gap-2 mb-3">
                   <span class="badge text-bg-light border">WordPress</span>
-                  <span class="badge text-bg-light border">Elementor</span>
-                  <span class="badge text-bg-light border">UX</span>
+                  <span class="badge text-bg-light border"
+                    >Web Development</span
+                  >
+                  <span class="badge text-bg-light border">Figma → Web</span>
+                  <span class="badge text-bg-light border"
+                    >Responsive Design</span
+                  >
+                  <span class="badge text-bg-light border">Team Project</span>
                 </div>
+
                 <div class="d-flex gap-2">
                   <a
                     class="btn btn-primary btn-sm"
-                    href="#"
+                    href="https://ghsenterprise.com/"
                     target="_blank"
                     rel="noreferrer"
-                    >Live</a
                   >
-                  <a
-                    class="btn btn-outline-secondary btn-sm"
-                    href="#"
-                    target="_blank"
-                    rel="noreferrer"
-                    >Case Study</a
-                  >
+                    Live Website
+                  </a>
                 </div>
               </div>
             </div>
