Disable "Download resume" link

--- a/index.html
+++ b/index.html
@@ -673,12 +673,12 @@
             <div class="card shadow-sm h-100">
               <div class="card-body">
                 <h3 class="h6 fw-semibold">Resume link</h3>
-                <p class="text-muted mb-2">
+                <!-- <p class="text-muted mb-2">
                   Add a PDF resume to your repo (example:
                   <code>assets/Olga-Resume.pdf</code>) and link it here:
-                </p>
+                </p> -->
                 <a
-                  class="btn btn-outline-primary btn-sm"
+                  class="btn btn-outline-primary btn-sm disabled"
                   href="#"
                   target="_blank"
                   rel="noreferrer"
